--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/WinterGameJam.data",
-        frameworkUrl: "Build/WinterGameJam.framework.js",
-        codeUrl: "Build/WinterGameJam.wasm",
+        dataUrl: "Build/WinterGameJam.data.unityweb",
+        frameworkUrl: "Build/WinterGameJam.framework.js.unityweb",
+        codeUrl: "Build/WinterGameJam.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "WinterGameJam",
         productName: "OtoshidamaAzasu",
